force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/ArdiraSurvey__Question_Dependency__c.object-meta.xml
<CustomObject>
    <description>This object stores the dependency information between questions.</description>
    <label>Ardira Question Dependency</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ardira Question Dependencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>