force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/fields/ArdiraSurvey__Active_Status__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Active_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates a question dependency rule is active or not. Only active rules are evaluate.</description>
    <inlineHelpText>Indicates a question dependency rule is active or not. Only active rules are evaluate.</inlineHelpText>
    <label>Active Status</label>
    <type>Checkbox</type>
</CustomField>