force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/fields/ArdiraSurvey__Dependency_Type__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Dependency_Type__c</fullName>
    <description>Type of action to be used when the question dependency criteria is met.</description>
    <inlineHelpText>Action to perform when the question dependency criteria is met.
Branch to: Move survey to the dependent question by skipping all questions in between
Show: Show the dependent question else hide the dependent question
Submit Survey: Submit the survey and take user to the thank you page based on the configuration</inlineHelpText>
    <label>Dependency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch to</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
                <default>true</default>
                <label>Show</label>
            </value>
            <value>
                <fullName>Submit Survey</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
                <isActive>false</isActive>
                <label>Hide</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>