force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/fields/ArdiraSurvey__Dependent_Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Dependent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User will be navigated to this question if the dependency criteria are met.</description>
    <inlineHelpText>Based on the selected action, user will be navigated to this question when the dependency criteria is met.</inlineHelpText>
    <label>Dependent Question</label>
    <referenceTo>ArdiraSurvey__Question__c</referenceTo>
    <relationshipLabel>Question Dependencies (Dependent)</relationshipLabel>
    <relationshipName>Question_Dependencies_Dependent</relationshipName>
    <type>Lookup</type>
</CustomField>