force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/fields/ArdiraSurvey__Expression_JSON__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Expression_JSON__c</fullName>
    <description>Stores questions dependency rule in JSON format.</description>
    <inlineHelpText>Stores questions dependency rule in JSON format.</inlineHelpText>
    <label>Expression JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>