force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/fields/ArdiraSurvey__Logic_Function__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Logic_Function__c</fullName>
    <description>Logical function used to calculate the dependency.</description>
    <inlineHelpText>Logical function used to calculate the dependency.</inlineHelpText>
    <label>Logic Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Not Equal To</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Less or Equal</fullName>
            </value>
            <value>
                <fullName>Greater or Equal</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Does not Contain</fullName>
            </value>
            <value>
                <fullName>Starts With</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>