force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/fields/ArdiraSurvey__Logic_Type__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Logic_Type__c</fullName>
    <description>Dependencies are identified by using this logic type.</description>
    <inlineHelpText>Dependencies are identified by using this logic type.</inlineHelpText>
    <label>Logic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answer to</fullName>
                <default>true</default>
                <label>Answer to</label>
            </value>
            <value>
                <fullName>Score of</fullName>
            </value>
            <value>
                <fullName>Salesforce Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>