force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/fields/ArdiraSurvey__Rule_Text__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Rule_Text__c</fullName>
    <description>This field is used to store rule description.</description>
    <inlineHelpText>This field is used to store rule description.</inlineHelpText>
    <label>Rule Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>