force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/fields/ArdiraSurvey__Selected_Answer__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Selected_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected answer choice triggering the dependency.</description>
    <inlineHelpText>Selected answer choice triggering the dependency.</inlineHelpText>
    <label>Selected Answer</label>
    <referenceTo>ArdiraSurvey__Answer_Choice__c</referenceTo>
    <relationshipLabel>Question Dependencies</relationshipLabel>
    <relationshipName>Question_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>