force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/fields/ArdiraSurvey__Selected_Answer_Label__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Selected_Answer_Label__c</fullName>
    <description>Label of the selected answer choice.</description>
    <formula>ArdiraSurvey__Selected_Answer__r.ArdiraSurvey__Choice_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Selected answer choice label.</inlineHelpText>
    <label>Selected Answer Label</label>
    <type>Text</type>
</CustomField>