force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/fields/ArdiraSurvey__Source_Question__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Source_Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Source question for this dependency.</description>
    <inlineHelpText>Source question for this dependency.</inlineHelpText>
    <label>Source Question</label>
    <referenceTo>ArdiraSurvey__Question__c</referenceTo>
    <relationshipLabel>Question Dependencies (Source)</relationshipLabel>
    <relationshipName>Question_Dependencies_Source</relationshipName>
    <type>Lookup</type>
</CustomField>