force-app/main/default/objects/ArdiraSurvey__Question_Dependency__c/fields/ArdiraSurvey__Survey__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Question dependency is part of this survey.</description>
    <inlineHelpText>Question dependency is part of this survey.</inlineHelpText>
    <label>Survey</label>
    <referenceTo>ArdiraSurvey__Survey__c</referenceTo>
    <relationshipLabel>Question Dependencies</relationshipLabel>
    <relationshipName>Question_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>